--- a/root.yml
+++ b/root.yml
@@ -144,6 +144,8 @@ Parameters:
     Type: String
   CmsAudioLambdaZipName:
     Type: String
+  CmsImageLambdaZipName:
+    Type: String
 Resources:
   NotificationsStack:
     Type: "AWS::CloudFormation::Stack"
@@ -351,6 +353,31 @@ Resources:
         CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
         LambdaFunctionCodeS3Key: !Ref CmsAudioLambdaZipName
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-audio-lambda/cms-audio-lambda.yml"]]
+      TimeoutInMinutes: "5"
+  CmsImageLambdaPipelineStack:
+    Type: "AWS::CloudFormation::Stack"
+    Condition: CreatePipelineStacks
+    Properties:
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      Parameters:
+        OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+        GitHubOAuthToken: !Ref GitHubOAuthToken
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
+        RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
+        RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
+        CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-image-lambda/pipeline.yml"]]
+      TimeoutInMinutes: "5"
+  CmsImageLambdaStack:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      Parameters:
+        CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
+        LambdaFunctionCodeS3Key: !Ref CmsImageLambdaZipName
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-image-lambda/cms-image-lambda.yml"]]
       TimeoutInMinutes: "5"
 # Outputs:
   # VPCCertificateArn:
