--- a/root.yml
+++ b/root.yml
@@ -373,16 +373,16 @@ Resources:
         CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-image-lambda/pipeline.yml"]]
       TimeoutInMinutes: "5"
-  CmsImageLambdaStack:
-    Type: "AWS::CloudFormation::Stack"
-    Properties:
-      NotificationARNs:
-        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-      Parameters:
-        CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
-        LambdaFunctionCodeS3Key: !Ref CmsImageLambdaZipName
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-image-lambda/cms-image-lambda.yml"]]
-      TimeoutInMinutes: "5"
+  # CmsImageLambdaStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Properties:
+  #     NotificationARNs:
+  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #     Parameters:
+  #       CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
+  #       LambdaFunctionCodeS3Key: !Ref CmsImageLambdaZipName
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-image-lambda/cms-image-lambda.yml"]]
+  #     TimeoutInMinutes: "5"
 # Outputs:
   # VPCCertificateArn:
   #   Description: The ARN for the wildcard certificate for the VPC
