Fix description for audio lambda stack

--- a/cms-audio-lambda/cms-audio-lambda.yml
+++ b/cms-audio-lambda/cms-audio-lambda.yml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Audiogram application running in Docker
+Description: Audio processing Lambda function for CMS
 Parameters:
   CodeBucket:
     Type: String
