Fix typo in cert template description

--- a/certificate.yml
+++ b/certificate.yml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
-  Creates a wildcafrd ACM certificate for the standard VPC created by the root
+  Creates a wildcard ACM certificate for the standard VPC created by the root
   stack (eg *.vpc-af124354.prx.tech)
 Parameters:
   VPC:
