--- a/notifications.yml
+++ b/notifications.yml
@@ -13,6 +13,8 @@ Parameters:
     Type: String
   CodePipelineSlackWebhookURL:
     Type: String
+  IkeSlackVerificationToken:
+    Type: String
   TemplateBucket:
     Type: String
 Resources:
@@ -84,13 +86,34 @@ Resources:
       Code:
         S3Bucket: !Ref TemplateBucket
         S3Key: "lambdas/sns-ops-to-slack.zip"
-      Description: String # TODO
+      Description: >
+        Relays messages, which are produced by various AWS services and posted
+        to SNS, to the channels in Slack
       Environment:
         Variables:
           ASG_SLACK_WEBHOOK_URL: !Ref AutoScalingSlackWebhookURL
           CW_SLACK_WEBHOOK_URL: !Ref CloudWatchSlackWebhookURL
           PIPELINE_SLACK_WEBHOOK_URL: !Ref CodePipelineSlackWebhookURL
           CFN_SLACK_WEBHOOK_URL: !Ref CloudFormationSlackWebhookURL
+      Handler: index.handler
+      MemorySize: 128
+      Role: !GetAtt LambdaBasicExecutionIAMRole.Arn
+      Runtime: nodejs4.3
+      Timeout: 3
+  #
+  # A Lambda function that handles button action request
+  CodePipelineApprovalHandlerLambdaFunction:
+    Type: "AWS::Lambda::Function"
+    Properties:
+      Code:
+        S3Bucket: !Ref TemplateBucket
+        S3Key: "lambdas/codepipeline-approval-handler.zip"
+      Description: >
+        Handles requests sent from Slack in response to button actions related
+        to the approval of CodePipeline actions
+      Environment:
+        Variables:
+          SLACK_VERIFICATION_TOKEN: !Ref IkeSlackVerificationToken
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaBasicExecutionIAMRole.Arn
