--- a/root.yml
+++ b/root.yml
@@ -55,6 +55,8 @@ Parameters:
     Type: String
   CodePipelineSlackWebhookURL:
     Type: String
+  IkeSlackVerificationToken:
+    Type: String
   GitHubOAuthToken:
     Description: >
       A GitHub access token that has permissions for any repositories being
@@ -160,6 +162,7 @@ Resources:
         CloudWatchSlackWebhookURL: !Ref CloudWatchSlackWebhookURL
         CloudFormationSlackWebhookURL: !Ref CloudFormationSlackWebhookURL
         CodePipelineSlackWebhookURL: !Ref CodePipelineSlackWebhookURL
+        IkeSlackVerificationToken: !Ref IkeSlackVerificationToken
         TemplateBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket"]]
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/notifications.yml"]]
       TimeoutInMinutes: "2"
