Add apigateway permissions to CloudFormation role

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -335,6 +335,7 @@ Resources:
                   - "codepipeline:*"
                   - "codebuild:*"
                   - "acm:*"
+                  - "apigateway:*"
                 Resource: "*" # TODO Really?
   Pipeline:
     Type: "AWS::CodePipeline::Pipeline"
