Working on notification stack

--- a/notifications.yml
+++ b/notifications.yml
@@ -3,6 +3,10 @@ Description: >
   Creates foundational resources needed to handle infrastructure-related
   messaging and notifications
 Parameters:
+  BootstrapStackName:
+    Type: String
+  EnvironmentTypeAbbreviation:
+    Type: String
   OpsStatusMessagesSNSTopicArn:
     Type: String
   AutoScalingSlackWebhookURL:
@@ -124,39 +128,44 @@ Resources:
   CodePipelineApprovalHandlerRestApi:
     Type: "AWS::ApiGateway::RestApi"
     Properties:
-      Body:
-        swagger: "2.0"
-        info:
-          version: "2017-03-08T22:12:24Z"
-          title: "infrastructure"
-        basePath: "/bootstrap"
-        schemes:
-          - "https"
-        paths:
-          /codepipeline/approval/interactive-messages:
-            post:
-              produces:
-                - "application/json"
-              responses:
-                "200":
-                  description: "200 response"
-                  schema:
-                    $ref: "#/definitions/Empty"
-              x-amazon-apigateway-integration:
-                responses:
-                  default:
-                    statusCode: "200"
-                uri: !Join ["", ["arn:aws:apigateway:us-east-1:lambda:path/2015-03-31/functions/", !GetAtt CodePipelineApprovalHandlerLambdaFunction.Arn]]
-                passthroughBehavior: "when_no_match"
-                httpMethod: "POST"
-                contentHandling: "CONVERT_TO_TEXT"
-                type: "aws_proxy"
-        definitions:
-          Empty:
-            type: "object"
-            title: "Empty Schema"
-      # Description: "A test API"
-      # Name: "MyRestAPI"
+      Name: !Sub "${BootstrapStackName}-${EnvironmentTypeAbbreviation}-Notifications"
+      Description: "API used by a Notifications stack"
+  CodePipelineRestApiResource:
+    Type: "AWS::ApiGateway::Resource"
+    Properties:
+      RestApiId: !Ref CodePipelineApprovalHandlerRestApi
+      ParentId: !GetAtt CodePipelineApprovalHandlerRestApi.RootResourceId
+      PathPart: "codepipeline"
+  CodePipelineApprovalHandlerRestApiResource:
+    Type: "AWS::ApiGateway::Resource"
+    Properties:
+      RestApiId: !Ref CodePipelineApprovalHandlerRestApi
+      ParentId: !Ref CodePipelineRestApiResource
+      PathPart: "approval"
+  CodePipelineApprovalHandlerRestApiProxyMethod:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      RestApiId: !Ref CodePipelineApprovalHandlerRestApi
+      ResourceId: !Ref CodePipelineApprovalHandlerRestApiResource
+      HttpMethod: POST
+      AuthorizationType: NONE
+      Integration:
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${CodePipelineApprovalHandlerLambdaFunction.Arn}/invocations
+  CodePipelineApprovalHandlerRestApiDeployment:
+    DependsOn: CodePipelineApprovalHandlerRestApiProxyMethod
+    Type: "AWS::ApiGateway::Deployment"
+    Properties:
+      RestApiId: !Ref CodePipelineApprovalHandlerRestApi
+      Description: "Main deployment for a given root stack environment"
+  CodePipelineApprovalHandlerRestApiStage:
+    Type: "AWS::ApiGateway::Stage"
+    Properties:
+      StageName: !Sub "${BootstrapStackName}${EnvironmentTypeAbbreviation}"
+      Description: "Main stage for a given root stack environment"
+      RestApiId: !Ref CodePipelineApprovalHandlerRestApi
+      DeploymentId: !Ref CodePipelineApprovalHandlerRestApiDeployment
   #
   # Permission needs to be granted to each SNS topic to invoke the lambda
   SNSOpsMessagesToSlackLambdaFunctionStatusTopicPermission:
