--- a/root.yml
+++ b/root.yml
@@ -157,6 +157,8 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       Parameters:
+        BootstrapStackName: !Ref BootstrapStackName
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
         OpsStatusMessagesSNSTopicArn: !Ref OpsStatusMessagesSNSTopicArn
         AutoScalingSlackWebhookURL: !Ref AutoScalingSlackWebhookURL
         CloudWatchSlackWebhookURL: !Ref CloudWatchSlackWebhookURL
