--- a/root.yml
+++ b/root.yml
@@ -168,80 +168,80 @@ Resources:
         TemplateBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket"]]
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/notifications.yml"]]
       TimeoutInMinutes: "2"
-  VPCStack:
-    Type: "AWS::CloudFormation::Stack"
-    Properties:
-      NotificationARNs:
-        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/vpc.yml"]]
-      TimeoutInMinutes: "5"
-  CertificateStack:
-    Type: "AWS::CloudFormation::Stack"
-    Properties:
-      NotificationARNs:
-        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-      Parameters:
-        VPC: !GetAtt VPCStack.Outputs.VPC
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/certificate.yml"]]
-      TimeoutInMinutes: "5"
-  ECSClusterStack:
-    Type: "AWS::CloudFormation::Stack"
-    DependsOn: VPCStack
-    Properties:
-      NotificationARNs:
-        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-      Parameters:
-        KeyPairName: !Ref ASGKeyPairName
-        EnvironmentType: !Ref RootEnvironmentType
-        VPC: !GetAtt VPCStack.Outputs.VPC
-        VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
-        VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
-        VPCSubnet1AZ: !GetAtt VPCStack.Outputs.Subnet1AvailabilityZone
-        VPCSubnet2AZ: !GetAtt VPCStack.Outputs.Subnet2AvailabilityZone
-        OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-        OpsErrorMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsErrorMessagesSNSTopicArn
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/ecs.yml"]]
-      TimeoutInMinutes: "5"
-  AudiogramPipelineStack:
-    Type: "AWS::CloudFormation::Stack"
-    Condition: CreateSingletonStacks
-    DependsOn: ECSClusterStack
-    Properties:
-      NotificationARNs:
-        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-      Parameters:
-        GitHubOAuthToken: !Ref GitHubOAuthToken
-        RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
-        RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
-        AudiogramECRRegion: !Ref AudiogramECRRegion
-        AudiogramECRRepositoryName: !Ref AudiogramECRRepositoryName
-        AudiogramECRImageTag: !Ref AudiogramECRImageTag
-        OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/pipeline.yml"]]
-      TimeoutInMinutes: "5"
-  AudiogramStack:
-    Type: "AWS::CloudFormation::Stack"
-    DependsOn: ECSClusterStack
-    Properties:
-      NotificationARNs:
-        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-      Parameters:
-        VPC: !GetAtt VPCStack.Outputs.VPC
-        VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
-        VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
-        VPCCertificateArn: !GetAtt CertificateStack.Outputs.CertificateArn
-        RootStackName: !Ref AWS::StackName
-        ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
-        ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
-        ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
-        AudiogramECRRegion: !Ref AudiogramECRRegion
-        AudiogramECRRepositoryName: !Ref AudiogramECRRepositoryName
-        AudiogramECRImageTag: !Ref AudiogramECRImageTag
-        OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/audiogram.yml"]]
-      TimeoutInMinutes: "5"
+  # VPCStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Properties:
+  #     NotificationARNs:
+  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/vpc.yml"]]
+  #     TimeoutInMinutes: "5"
+  # CertificateStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Properties:
+  #     NotificationARNs:
+  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #     Parameters:
+  #       VPC: !GetAtt VPCStack.Outputs.VPC
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/certificate.yml"]]
+  #     TimeoutInMinutes: "5"
+  # ECSClusterStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   DependsOn: VPCStack
+  #   Properties:
+  #     NotificationARNs:
+  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #     Parameters:
+  #       KeyPairName: !Ref ASGKeyPairName
+  #       EnvironmentType: !Ref RootEnvironmentType
+  #       VPC: !GetAtt VPCStack.Outputs.VPC
+  #       VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
+  #       VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
+  #       VPCSubnet1AZ: !GetAtt VPCStack.Outputs.Subnet1AvailabilityZone
+  #       VPCSubnet2AZ: !GetAtt VPCStack.Outputs.Subnet2AvailabilityZone
+  #       OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #       OpsErrorMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsErrorMessagesSNSTopicArn
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/ecs.yml"]]
+  #     TimeoutInMinutes: "5"
+  # AudiogramPipelineStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Condition: CreateSingletonStacks
+  #   DependsOn: ECSClusterStack
+  #   Properties:
+  #     NotificationARNs:
+  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #     Parameters:
+  #       GitHubOAuthToken: !Ref GitHubOAuthToken
+  #       RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
+  #       RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
+  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
+  #       AudiogramECRRegion: !Ref AudiogramECRRegion
+  #       AudiogramECRRepositoryName: !Ref AudiogramECRRepositoryName
+  #       AudiogramECRImageTag: !Ref AudiogramECRImageTag
+  #       OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/pipeline.yml"]]
+  #     TimeoutInMinutes: "5"
+  # AudiogramStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   DependsOn: ECSClusterStack
+  #   Properties:
+  #     NotificationARNs:
+  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #     Parameters:
+  #       VPC: !GetAtt VPCStack.Outputs.VPC
+  #       VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
+  #       VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
+  #       VPCCertificateArn: !GetAtt CertificateStack.Outputs.CertificateArn
+  #       RootStackName: !Ref AWS::StackName
+  #       ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
+  #       ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
+  #       ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
+  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
+  #       AudiogramECRRegion: !Ref AudiogramECRRegion
+  #       AudiogramECRRepositoryName: !Ref AudiogramECRRepositoryName
+  #       AudiogramECRImageTag: !Ref AudiogramECRImageTag
+  #       OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/audiogram.yml"]]
+  #     TimeoutInMinutes: "5"
   # CmsPipelineStack:
   #   Type: "AWS::CloudFormation::Stack"
   #   Condition: CreateSingletonStacks
@@ -338,63 +338,63 @@ Resources:
   #       OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
   #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/publish.prx.org/publish.prx.org.yml"]]
   #     TimeoutInMinutes: "5"
-  CmsAudioLambdaPipelineStack:
-    Type: "AWS::CloudFormation::Stack"
-    Condition: CreateSingletonStacks
-    Properties:
-      NotificationARNs:
-        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-      Parameters:
-        OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-        GitHubOAuthToken: !Ref GitHubOAuthToken
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
-        RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
-        RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
-        CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-audio-lambda/pipeline.yml"]]
-      TimeoutInMinutes: "5"
-  CmsAudioLambdaStack:
-    Type: "AWS::CloudFormation::Stack"
-    Properties:
-      NotificationARNs:
-        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-      Parameters:
-        CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
-        LambdaFunctionCodeS3Key: !Ref CmsAudioLambdaZipName
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-audio-lambda/cms-audio-lambda.yml"]]
-      TimeoutInMinutes: "5"
-  CmsImageLambdaPipelineStack:
-    Type: "AWS::CloudFormation::Stack"
-    Condition: CreateSingletonStacks
-    Properties:
-      NotificationARNs:
-        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-      Parameters:
-        OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-        GitHubOAuthToken: !Ref GitHubOAuthToken
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
-        RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
-        RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
-        CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-image-lambda/pipeline.yml"]]
-      TimeoutInMinutes: "5"
-  CmsImageLambdaStack:
-    Type: "AWS::CloudFormation::Stack"
-    Properties:
-      NotificationARNs:
-        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-      Parameters:
-        CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
-        LambdaFunctionCodeS3Key: !Ref CmsImageLambdaZipName
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-image-lambda/cms-image-lambda.yml"]]
-      TimeoutInMinutes: "5"
+  # CmsAudioLambdaPipelineStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Condition: CreateSingletonStacks
+  #   Properties:
+  #     NotificationARNs:
+  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #     Parameters:
+  #       OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #       GitHubOAuthToken: !Ref GitHubOAuthToken
+  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
+  #       RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
+  #       RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
+  #       CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-audio-lambda/pipeline.yml"]]
+  #     TimeoutInMinutes: "5"
+  # CmsAudioLambdaStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Properties:
+  #     NotificationARNs:
+  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #     Parameters:
+  #       CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
+  #       LambdaFunctionCodeS3Key: !Ref CmsAudioLambdaZipName
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-audio-lambda/cms-audio-lambda.yml"]]
+  #     TimeoutInMinutes: "5"
+  # CmsImageLambdaPipelineStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Condition: CreateSingletonStacks
+  #   Properties:
+  #     NotificationARNs:
+  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #     Parameters:
+  #       OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #       GitHubOAuthToken: !Ref GitHubOAuthToken
+  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
+  #       RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
+  #       RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
+  #       CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-image-lambda/pipeline.yml"]]
+  #     TimeoutInMinutes: "5"
+  # CmsImageLambdaStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Properties:
+  #     NotificationARNs:
+  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #     Parameters:
+  #       CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
+  #       LambdaFunctionCodeS3Key: !Ref CmsImageLambdaZipName
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-image-lambda/cms-image-lambda.yml"]]
+  #     TimeoutInMinutes: "5"
 Outputs:
-  VPCCertificateArn:
-    Description: The ARN for the wildcard certificate for the VPC
-    Value: !GetAtt CertificateStack.Outputs.CertificateArn
-  AudiogramHostedZoneDNSName:
-    Description: Domain name for audiogram app
-    Value: !GetAtt AudiogramStack.Outputs.HostedZoneDNSName
+  # VPCCertificateArn:
+  #   Description: The ARN for the wildcard certificate for the VPC
+  #   Value: !GetAtt CertificateStack.Outputs.CertificateArn
+  # AudiogramHostedZoneDNSName:
+  #   Description: Domain name for audiogram app
+  #   Value: !GetAtt AudiogramStack.Outputs.HostedZoneDNSName
   # PublishHostedZoneDNSName:
   #   Description: Domain name for publish app
   #   Value: !GetAtt PublishStack.Outputs.HostedZoneDNSName
