--- a/notifications.yml
+++ b/notifications.yml
@@ -99,6 +99,7 @@ Resources:
           CW_SLACK_WEBHOOK_URL: !Ref CloudWatchSlackWebhookURL
           PIPELINE_SLACK_WEBHOOK_URL: !Ref CodePipelineSlackWebhookURL
           CFN_SLACK_WEBHOOK_URL: !Ref CloudFormationSlackWebhookURL
+          IKE_SLACK_WEBHOOK_URL: !Ref IkeSlackVerificationToken
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaBasicExecutionIAMRole.Arn
