--- a/root.yml
+++ b/root.yml
@@ -388,7 +388,7 @@ Resources:
   #       LambdaFunctionCodeS3Key: !Ref CmsImageLambdaZipName
   #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-image-lambda/cms-image-lambda.yml"]]
   #     TimeoutInMinutes: "5"
-Outputs:
+# Outputs:
   # VPCCertificateArn:
   #   Description: The ARN for the wildcard certificate for the VPC
   #   Value: !GetAtt CertificateStack.Outputs.CertificateArn
