Fix Ike config params

--- a/notifications.yml
+++ b/notifications.yml
@@ -17,6 +17,8 @@ Parameters:
     Type: String
   CodePipelineSlackWebhookURL:
     Type: String
+  IkeSlackSlackWebhookURL:
+    Type: String
   IkeSlackVerificationToken:
     Type: String
   TemplateBucket:
@@ -99,7 +101,7 @@ Resources:
           CW_SLACK_WEBHOOK_URL: !Ref CloudWatchSlackWebhookURL
           PIPELINE_SLACK_WEBHOOK_URL: !Ref CodePipelineSlackWebhookURL
           CFN_SLACK_WEBHOOK_URL: !Ref CloudFormationSlackWebhookURL
-          IKE_SLACK_WEBHOOK_URL: !Ref IkeSlackVerificationToken
+          IKE_SLACK_WEBHOOK_URL: !Ref IkeSlackSlackWebhookURL
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaBasicExecutionIAMRole.Arn
