--- a/root.yml
+++ b/root.yml
@@ -57,6 +57,8 @@ Parameters:
     Type: String
   IkeSlackVerificationToken:
     Type: String
+  IkeSlackSlackWebhookURL:
+    Type: String
   GitHubOAuthToken:
     Description: >
       A GitHub access token that has permissions for any repositories being
@@ -164,6 +166,7 @@ Resources:
         CloudWatchSlackWebhookURL: !Ref CloudWatchSlackWebhookURL
         CloudFormationSlackWebhookURL: !Ref CloudFormationSlackWebhookURL
         CodePipelineSlackWebhookURL: !Ref CodePipelineSlackWebhookURL
+        IkeSlackSlackWebhookURL: !Ref IkeSlackSlackWebhookURL
         IkeSlackVerificationToken: !Ref IkeSlackVerificationToken
         TemplateBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket"]]
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/notifications.yml"]]
