Add API Gateway permission for Lambda execution

--- a/notifications.yml
+++ b/notifications.yml
@@ -169,6 +169,13 @@ Resources:
       Description: "Main stage for a given root stack environment"
       RestApiId: !Ref CodePipelineApprovalHandlerRestApi
       DeploymentId: !Ref CodePipelineApprovalHandlerRestApiDeployment
+  CodePipelineApprovalHandlerRestApiLambdaPermission:
+    Type: "AWS::Lambda::Permission"
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref CodePipelineApprovalHandlerLambdaFunction
+      Principal: apigateway.amazonaws.com
+      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:#{AWS::AccountId}:${CodePipelineApprovalHandlerRestApi}/${CodePipelineApprovalHandlerRestApiStage}/*"
   #
   # Permission needs to be granted to each SNS topic to invoke the lambda
   SNSOpsMessagesToSlackLambdaFunctionStatusTopicPermission:
