Add output value for CodePipeline approval handler API endpoint

--- a/notifications.yml
+++ b/notifications.yml
@@ -258,3 +258,5 @@ Outputs:
     Value: !Ref OpsErrorMessagesSNSTopic
   OpsFatalMessagesSNSTopicArn:
     Value: !Ref OpsFatalMessagesSNSTopic
+  CodePipelineApprovalHandlerCallbackURL:
+    Value: !Sub "https://${CodePipelineApprovalHandlerRestApi}.execute-api.${AWS::Region}.amazonaws.com/${CodePipelineApprovalHandlerRestApiStage}/${CodePipelineRestApiResource}/${CodePipelineApprovalHandlerRestApiResource}"
