Fix approval URL output

--- a/notifications.yml
+++ b/notifications.yml
@@ -163,13 +163,13 @@ Resources:
     Properties:
       RestApiId: !Ref CodePipelineApprovalHandlerRestApi
       ParentId: !GetAtt CodePipelineApprovalHandlerRestApi.RootResourceId
-      PathPart: "codepipeline"
+      PathPart: "codepipeline" # If this changes update Output
   CodePipelineApprovalHandlerRestApiResource:
     Type: "AWS::ApiGateway::Resource"
     Properties:
       RestApiId: !Ref CodePipelineApprovalHandlerRestApi
       ParentId: !Ref CodePipelineRestApiResource
-      PathPart: "approval"
+      PathPart: "approval" # If this changes update Output
   CodePipelineApprovalHandlerRestApiProxyMethod:
     Type: AWS::ApiGateway::Method
     Properties:
@@ -259,4 +259,4 @@ Outputs:
   OpsFatalMessagesSNSTopicArn:
     Value: !Ref OpsFatalMessagesSNSTopic
   CodePipelineApprovalHandlerCallbackURL:
-    Value: !Sub "https://${CodePipelineApprovalHandlerRestApi}.execute-api.${AWS::Region}.amazonaws.com/${CodePipelineApprovalHandlerRestApiStage}/${CodePipelineRestApiResource}/${CodePipelineApprovalHandlerRestApiResource}"
+    Value: !Sub "https://${CodePipelineApprovalHandlerRestApi}.execute-api.${AWS::Region}.amazonaws.com/${CodePipelineApprovalHandlerRestApiStage}/codepipeline/approval"
