--- a/root.yml
+++ b/root.yml
@@ -154,6 +154,8 @@ Parameters:
     Type: String
   CmsImageLambdaZipName:
     Type: String
+  UploadLambdaZipName:
+    Type: String
 Resources:
   NotificationsStack:
     Type: "AWS::CloudFormation::Stack"
@@ -391,6 +393,32 @@ Resources:
   #       LambdaFunctionCodeS3Key: !Ref CmsImageLambdaZipName
   #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-image-lambda/cms-image-lambda.yml"]]
   #     TimeoutInMinutes: "5"
+  UploadLambdaPipelineStack:
+    Type: "AWS::CloudFormation::Stack"
+    Condition: CreateSingletonStacks
+    Properties:
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      Parameters:
+        OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+        GitHubOAuthToken: !Ref GitHubOAuthToken
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
+        RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
+        RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
+        CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
+        PRXUploadAccessKey: !Red PRXUploadAccessKey
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/upload.prx.org/pipeline.yml"]]
+      TimeoutInMinutes: "5"
+  UploadLambdaStack:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      Parameters:
+        CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
+        LambdaFunctionCodeS3Key: !Ref UploadLambdaZipName
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/upload.prx.org/upload.prx.org.yml"]]
+      TimeoutInMinutes: "5"
 # Outputs:
   # VPCCertificateArn:
   #   Description: The ARN for the wildcard certificate for the VPC
