--- a/root.yml
+++ b/root.yml
@@ -406,7 +406,7 @@ Resources:
         RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
         RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
         CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
-        PRXUploadAccessKey: !Red PRXUploadAccessKey
+        PRXUploadAccessKey: !Ref PRXUploadAccessKey
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/upload.prx.org/pipeline.yml"]]
       TimeoutInMinutes: "5"
   UploadLambdaStack:
