--- a/root.yml
+++ b/root.yml
@@ -156,6 +156,8 @@ Parameters:
     Type: String
   UploadLambdaZipName:
     Type: String
+  PRXUploadAccessKey:
+    Type: String
 Resources:
   NotificationsStack:
     Type: "AWS::CloudFormation::Stack"
