Use fewer root parameters

--- a/root.yml
+++ b/root.yml
@@ -74,16 +74,16 @@ Parameters:
     Type: String
   CmsECRRepositoryName:
     Type: String
-  CmsECRImageTag:
-    Type: String
-  CmsEnvAwsAccessKeyId:
-    Type: String
-  CmsEnvAwsAccountId:
-    Type: String
-  CmsEnvAwsBucket:
-    Type: String
-  CmsEnvAwsRegion:
-    Type: String
+  # CmsECRImageTag:
+  #   Type: String
+  # CmsEnvAwsAccessKeyId:
+  #   Type: String
+  # CmsEnvAwsAccountId:
+  #   Type: String
+  # CmsEnvAwsBucket:
+  #   Type: String
+  # CmsEnvAwsRegion:
+  #   Type: String
   CmsEnvAwsSecretAccessKey:
     Type: String
   CmsEnvCmsHost:
