Switch to AWS-specific parameter types

--- a/certificate.yml
+++ b/certificate.yml
@@ -4,7 +4,7 @@ Description: >
   stack (eg *.vpc-af124354.prx.tech)
 Parameters:
   VPC:
-     Type: String
+     Type: "AWS::EC2::VPC::Id"
 Resources:
   VpcCertificate:
     Type: "AWS::CertificateManager::Certificate"
