--- a/ecs.yml
+++ b/ecs.yml
@@ -13,22 +13,22 @@ Parameters:
     Description: >
      The EC2 key pair used for instances in the Auto Scaling
      group (region-specific)
-    Type: String
+    Type: "AWS::EC2::KeyPair::KeyName"
   EnvironmentType:
     Description: >
       The kind of environment this cluster is being used for (eg
       Production, Staging, etc)
     Type: String
   VPC:
-    Type: String
+    Type: "AWS::EC2::Subnet::Id"
   VPCSubnet1:
-    Type: String
+    Type: "AWS::EC2::Subnet::Id"
   VPCSubnet2:
-    Type: String
+    Type: "AWS::EC2::Subnet::Id"
   VPCSubnet1AZ:
-    Type: String
+    Type: "AWS::EC2::AvailabilityZone::Name"
   VPCSubnet2AZ:
-    Type: String
+    Type: "AWS::EC2::AvailabilityZone::Name"
   OpsDebugMessagesSNSTopicArn:
     Type: String
   OpsErrorMessagesSNSTopicArn:
