--- a/root.yml
+++ b/root.yml
@@ -29,7 +29,7 @@ Parameters:
     Description: >
       The EC2 key pair used for instances in the Auto Scaling
       group (region-specific)
-    Type: String
+    Type: "AWS::EC2::KeyPair::KeyName"
   BootstrapStackName:
     Description: The name of the bootstrapping stack in this AWS region
     Type: String
