--- a/audiogram/audiogram.yml
+++ b/audiogram/audiogram.yml
@@ -6,11 +6,11 @@ Mappings:
       name: server-worker-combined
 Parameters:
   VPC:
-    Type: String
+    Type: "AWS::EC2::VPC::Id"
   VPCSubnet1:
-    Type: String
+    Type: "AWS::EC2::Subnet::Id"
   VPCSubnet2:
-    Type: String
+    Type: "AWS::EC2::Subnet::Id"
   VPCCertificateArn:
     Type: String
   RootStackName:
