--- a/cms.prx.org/cms.prx.org.yml
+++ b/cms.prx.org/cms.prx.org.yml
@@ -8,11 +8,11 @@ Mappings:
       name: cms-worker
 Parameters:
   VPC:
-    Type: String
+    Type: "AWS::EC2::VPC::Id"
   VPCSubnet1:
-    Type: String
+    Type: "AWS::EC2::Subnet::Id"
   VPCSubnet2:
-    Type: String
+    Type: "AWS::EC2::Subnet::Id"
   VPCCertificateArn:
     Type: String
   RootStackName:
